first version of the html structure

--- a/index.html
+++ b/index.html
@@ -10,8 +10,31 @@
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <header id="header">
+      <h2 id="product-title">Microverse</h2>
       <img src="logo.png" alt="" id="header-img">
+      <nav>
+        <a href="#section1">Section 1</a>
+        <a href="#section1">Section 1</a>
+        <a href="#section1">Section 1</a>
+      </nav>
     </header>
+    <section id="section1">
+      <video src="" id="video"></video>
+      <h3 id="video-title">How Microverse works</h3>
+      <p id="video-description">Watch this short video to learn more about us</p>
+    </section>
+    <section id="section2">
+      <h3 id="product-description">We're Microverse</h3>
+      <p id="product-description">Thinked for developers</p>
+    </section>
+    <section id="section3">
+      <form action="">
+        <label for="email">Sing up to get the latest updates on this item!</label>
+        <input type="email" id="email" required>
+        <input type="submit" id="submit" value="submit">
+      </form>
+    </section>
     <script  src="js/index.js"></script>
+    
   </body>
 </html>
