--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </nav>
     </header>
     <section id="section1">
-      <video src="" id="video"></video>
+      <video src="https://www.youtube.com/watch?v=yYc48hxdTjo" id="video"></video>
       <h3 id="video-title">How Microverse works</h3>
       <p id="video-description">Watch this short video to learn more about us</p>
     </section>
