--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         <a href="#section1">Section 1</a>
       </nav>
     </header>
+    <div>
+      <div>
+
+      </div>
+      <div>
+        \
+      </div>
+    </div>
+
     <section id="section1">
       <video src="https://www.youtube.com/watch?v=yYc48hxdTjo" id="video"></video>
       <h3 id="video-title">How Microverse works</h3>
