--- a/index.html
+++ b/index.html
@@ -11,38 +11,35 @@
 
     <header id="header">
       <h2 id="product-title">Microverse</h2>
-      <img src="logo.png" alt="" id="header-img">
+      <img src="https://assets-global.website-files.com/5dbb30f00775d4350591a4e5/6336e01ef28c9432e8ee9e6b_untitled-design-1.webp" alt="" id="header-img">
       <nav>
         <a href="#section1">Section 1</a>
         <a href="#section1">Section 1</a>
         <a href="#section1">Section 1</a>
       </nav>
     </header>
-    <div>
-      <div>
-
+    <div class="main">
+      <div class="col left-col">
+        <section id="section1">
+          <video src="https://www.youtube.com/watch?v=yYc48hxdTjo" id="video"></video>
+          <h3 id="video-title">How Microverse works</h3>
+          <p id="video-description">Watch this short video to learn more about us</p>
+        </section>
       </div>
-      <div>
-        \
+      <div class="col right-col">
+        <section id="section2">
+          <h3 id="product-description">We're Microverse</h3>
+          <p id="product-description">Thinked for developers</p>
+        </section>
+        <section id="section3">
+          <form action="">
+            <label for="email">Sing up to get the latest updates on this item!</label>
+            <input type="email" id="email" required>
+            <input type="submit" id="submit" value="submit">
+          </form>
+        </section>
       </div>
     </div>
-
-    <section id="section1">
-      <video src="https://www.youtube.com/watch?v=yYc48hxdTjo" id="video"></video>
-      <h3 id="video-title">How Microverse works</h3>
-      <p id="video-description">Watch this short video to learn more about us</p>
-    </section>
-    <section id="section2">
-      <h3 id="product-description">We're Microverse</h3>
-      <p id="product-description">Thinked for developers</p>
-    </section>
-    <section id="section3">
-      <form action="">
-        <label for="email">Sing up to get the latest updates on this item!</label>
-        <input type="email" id="email" required>
-        <input type="submit" id="submit" value="submit">
-      </form>
-    </section>
     <script  src="js/index.js"></script>
     
   </body>
