--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </nav>
   </header>
   <div class="main">
-    <div class="cointainer">
+    <div class="container">
       <div class="col left-col">
         <section id="section1">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/yYc48hxdTjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
