--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
   <header id="header">
-    <h2 id="product-title">Microverse</h2>
+    <h1 id="title">Microverse</h1>
     <img
       src="https://assets-global.website-files.com/5dbb30f00775d4350591a4e5/6336e01ef28c9432e8ee9e6b_untitled-design-1.webp"
       alt="" id="header-img">
@@ -39,9 +39,13 @@
   
       <section id="section3">
         <form id="form" action="https://www.freecodecamp.com/email-submit" method="post">
-          <label for="email">Sing up to get the latest updates on this item!</label>
-          <input type="email" id="email" placeholder="Typer your email" name="email" required>
-          <input type="submit" id="submit" value="submit">
+          <div>
+            <label for="email">Sign up to get the latest updates on this item!</label>
+          <input type="email" id="email" placeholder="Type your email" name="email" required>
+          </div>
+          <div>
+            <input type="submit" id="submit" value="Sign Up">
+          </div>
         </form>
       </section>
     </div>
