--- a/index.html
+++ b/index.html
@@ -24,17 +24,15 @@
       src="https://assets-global.website-files.com/5dbb30f00775d4350591a4e5/6336e01ef28c9432e8ee9e6b_untitled-design-1.webp"
       alt="" id="header-img">
     <nav id="nav-bar">
-      <a class="nav-link" href="#section1">Section 1</a>
-      <a class="nav-link" href="#section1">Section 1</a>
-      <a class="nav-link" href="#section1">Section 1</a>
+      <a class="nav-link" href="#section1">Check our video</a>
+      <a class="nav-link" href="#section2">More about</a>
+      <a class="nav-link" href="#section3">Register now</a>
     </nav>
   </header>
   <div class="container">
     <div class="col left-col">
       <section id="section1">
-        <video id="video" width="560" height="315" controls>
-          <source src="https://www.youtube.com/embed/yYc48hxdTjo" /> 
-        </video>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/yYc48hxdTjo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         <h3 id="video-title">How Microverse works</h3>
         <p id="video-description">Watch this short video to learn more about us</p>
       </section>
@@ -42,7 +40,7 @@
     <div class="col right-col">
       <section id="section2">
         <h3 id="product-description">We're Microverse</h3>
-        <p id="product-description">Thinked for developers</p>
+        <p id="product-description">Our subscription to microverse for 3 months will help ypu to improve your coding skills. It is only $9.99. Learn with the best and start your road as a full stack developer proving your skills in real world projects  </p>
       </section>
   
       <section id="section3">
